force-app/main/default/objects/EDealer_Suggested_Order__c/EDealer_Suggested_Order__c.object-meta.xml
<CustomObject>
    <label>Suggested Order</label>
    <nameField>
        <displayFormat>SO-{0}</displayFormat>
        <label>Suggested Order Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Suggested Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>