force-app/main/default/objects/EDealer_Suggested_Order__c/fields/DBS_Type__c.field-meta.xml
<CustomField>
    <fullName>DBS_Type__c</fullName>
    <label>DBS Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>