force-app/main/default/objects/EDealer_Suggested_Order__c/fields/Dealer_Code__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Code__c</fullName>
    <formula>Dealer_Location__r.Dealer_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dealer Code</label>
    <type>Text</type>
</CustomField>