force-app/main/default/objects/EDealer_Suggested_Order__c/fields/Dealer_Ineventory_Qty__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Ineventory_Qty__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Dealer Ineventory Qty</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>