force-app/main/default/objects/EDealer_Suggested_Order__c/fields/Dealer_Location__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Location__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Dealer Location</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Suggested Orders</relationshipLabel>
    <relationshipName>Suggested_Orders</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>