force-app/main/default/objects/EDealer_Suggested_Order__c/fields/Dealer_Supplier_Code__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Supplier_Code__c</fullName>
    <label>Dealer Supplier Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>