force-app/main/default/objects/EDealer_Suggested_Order__c/fields/Emergency_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Emergency_Indicator__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Emergency Indicator</label>
    <type>Checkbox</type>
</CustomField>