force-app/main/default/objects/EDealer_Suggested_Order__c/fields/Is_Special_Order_Part__c.field-meta.xml
<CustomField>
    <fullName>Is_Special_Order_Part__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Special Order Part</label>
    <type>Checkbox</type>
</CustomField>