force-app/main/default/objects/EDealer_Suggested_Order__c/fields/Original_Part_Type__c.field-meta.xml
<CustomField>
    <fullName>Original_Part_Type__c</fullName>
    <label>Original Part Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>