force-app/main/default/objects/EDealer_Suggested_Order__c/fields/Part_Category_Type__c.field-meta.xml
<CustomField>
    <fullName>Part_Category_Type__c</fullName>
    <label>Part Category Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>DSP</fullName>
            </value>
            <value>
                <fullName>DUAL</fullName>
            </value>
            <value>
                <fullName>EM</fullName>
            </value>
            <value>
                <fullName>PDC</fullName>
            </value>
            <value>
                <fullName>ENG</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>