force-app/main/default/objects/EDealer_Suggested_Order__c/fields/Part_Description__c.field-meta.xml
<CustomField>
    <fullName>Part_Description__c</fullName>
    <label>Part Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>