force-app/main/default/objects/EDealer_Suggested_Order__c/fields/Part_Name__c.field-meta.xml
<CustomField>
    <fullName>Part_Name__c</fullName>
    <label>Part Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>