force-app/main/default/objects/EDealer_Suggested_Order__c/fields/Pricing_Detail__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Detail__c</fullName>
    <label>Pricing Detail</label>
    <length>80000</length>
    <type>LongTextArea</type>
</CustomField>