force-app/main/default/objects/EDealer_Suggested_Order__c/fields/Qty_on_Order_Today__c.field-meta.xml
<CustomField>
    <fullName>Qty_on_Order_Today__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Qty on Order Today</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>