force-app/main/default/objects/EDealer_Suggested_Order__c/fields/SOF_Comments__c.field-meta.xml
<CustomField>
    <fullName>SOF_Comments__c</fullName>
    <label>SOF Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>