force-app/main/default/objects/EDealer_Suggested_Order__c/fields/SOF_Created_DT__c.field-meta.xml
<CustomField>
    <fullName>SOF_Created_DT__c</fullName>
    <label>SOF Created DT</label>
    <length>255</length>
    <type>Text</type>
</CustomField>