force-app/main/default/objects/EDealer_Suggested_Order__c/fields/SOF_File_Date__c.field-meta.xml
<CustomField>
    <fullName>SOF_File_Date__c</fullName>
    <label>SOF File Date</label>
    <type>DateTime</type>
</CustomField>