force-app/main/default/objects/EDealer_Suggested_Order__c/fields/SOF_Type__c.field-meta.xml
<CustomField>
    <fullName>SOF_Type__c</fullName>
    <label>SOF Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Overnight</fullName>
            </value>
            <value>
                <fullName>MDI 360</fullName>
            </value>
            <value>
                <fullName>Adhoc</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>