force-app/main/default/objects/EDealer_Suggested_Order__c/fields/SPQ__c.field-meta.xml
<CustomField>
    <fullName>SPQ__c</fullName>
    <label>SPQ</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>