force-app/main/default/objects/EDealer_Suggested_Order__c/fields/Stocking_Class__c.field-meta.xml
<CustomField>
    <fullName>Stocking_Class__c</fullName>
    <label>Stocking Class</label>
    <length>255</length>
    <type>Text</type>
</CustomField>