force-app/main/default/objects/EDealer_Suggested_Order__c/fields/Stocking_List_Type__c.field-meta.xml
<CustomField>
    <fullName>Stocking_List_Type__c</fullName>
    <label>Stocking List Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CSL</fullName>
            </value>
            <value>
                <fullName>RSL</fullName>
            </value>
            <value>
                <fullName>MSL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>