force-app/main/default/objects/EDealer_Suggested_Order__c/fields/Suggested_Qty__c.field-meta.xml
<CustomField>
    <fullName>Suggested_Qty__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Suggested Qty</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>