force-app/main/default/objects/EDealer_Suggested_Order__c/fields/Supersession_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Supersession_Indicator__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Supersession Indicator</label>
    <type>Checkbox</type>
</CustomField>