force-app/main/default/objects/EDealer_Suggested_Order__c/fields/Total_Qty_Ordered__c.field-meta.xml
<CustomField>
    <fullName>Total_Qty_Ordered__c</fullName>
    <label>Total Qty Ordered</label>
    <summarizedField>EDealerCart__c.Quantity__c</summarizedField>
    <summaryFilterItems>
        <field>EDealerCart__c.Type__c</field>
        <operation>equals</operation>
        <value>Order Placed</value>
    </summaryFilterItems>
    <summaryForeignKey>EDealerCart__c.Suggested_Order__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>