force-app/main/default/objects/EDealer_Suggested_Order__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <defaultValue>&quot;SOF&quot;</defaultValue>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SOF</fullName>
            </value>
            <value>
                <fullName>Master Inventory</fullName>
            </value>
            <value>
                <fullName>Part Availability</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>