force-app/main/default/objects/EDealer_Suggested_Order__c/fields/Velocity_Code__c.field-meta.xml
<CustomField>
    <fullName>Velocity_Code__c</fullName>
    <label>Velocity Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>